logs/job_1411.err
  File "/home/ihubnvidia20/vqe4.py", line 119
    basis="sto3g",
    ^
SyntaxError: invalid syntax
